# frt-photo-share

./: .example.env  .gitignore  LICENSE.md  README.md  main.py  pyproject.toml  requirements.txt
docs/: conf.py  index.rst
logs/: frt_photo_share_asynclog.txt
postgres-data/: postmaster.pid
postgres-data/base/13408/: pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/global/: 1260  1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat_tmp/: db_0.stat  db_13408.stat  db_16384.stat  global.stat
src/: schemas.py
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: comments.py  images.py  ratings.py  tags.py  users.py
src/routes/: auth.py  comments.py  images.py  ratings.py  users.py
src/schemas/: images.py  users.py
src/services/: asyncdevlogging.py  asynclogging.py  auth.py  email.py  generator_password.py  images.py  roles.py
src/services/templates/: base.html  email_template.html  new_password.html  password_reset.html  password_reset_complete.html  password_reset_done.html
src/shemas/: images.py  users.py
tests/: conftest.py  test_repository_images.py  test_repository_users.py  test_root.py  test_route_auth.py  test_route_users.py  test_routes_comments.py  test_routes_images.py  test_unit_repository_comments.py
