[tool.poetry]
name = "frt-photo-share"
version = "0.1.0"
description = ""
authors = ["FRT <a.kylymnyk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
sqlalchemy = "^2.0.9"
alembic = "^1.10.3"
pydantic = {extras = ["email"], version = "^1.10.7"}
jinja2 = "^3.1.2"
python-multipart = "^0.0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
libgravatar = "^1.0.4"
fastapi-mail = "^1.2.7"
redis = "^4.5.4"
fastapi-limiter = "^0.1.5"
cloudinary = "^1.32.0"
httpx = "^0.24.0"
pytest = "^7.3.1"
fastapi-pagination = "0.11.4"
aiofile = "^3.8.5"
aiopath = "^0.6.11"
qrcode = "^7.4.2"
psycopg2-binary = "^2.9.6"
pytest-mock = "^3.10.0"

[tool.poetry.group.dev.dependencies]
sphinx = "^7.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
